_includes/css/main.css
/*	
	Author: Alex Staravoitau
	Based on Carlos Alvarez's SOLID Bootstrap 3 Theme
 */ 

@import url(https://fonts.googleapis.com/css?family=Raleway:400,700,900);
@import url(https://fonts.googleapis.com/css?family=Lato:400,700,900);
@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,600);
@import url(https://fonts.googleapis.com/css?family=Inconsolata:400,700);
@import url("prettyPhoto.css") screen;
@import url("hoverex-all.css") screen;
@import url("darkly.css") screen;

/* General */

* { 
	margin: 0;
	padding: 0px;
}

html {
	position: relative;
	min-height: 100%;
}

body { 
	background: #ffffff; 
	margin: 0; 
	margin-bottom: 50px;
	height: 100%; 
	color: {{ site.colors.secondary }};
	font-family: 'Open Sans', sans-serif;
	font-weight: 400;
}

h1, h2, h3, h4, h5, h6 {
	font-family: 'Lato', sans-serif;
	font-weight: 700;
	margin-top: 30px;
}

p { 
	padding: 0; 
	margin-bottom: 12px; 
	font-family: 'Open Sans', sans-serif;
	font-weight: 400;
	font-size: 14px; 
	line-height: 24px;
	color: {{ site.colors.secondary }}; 
	margin-top: 10px; 
}

img {
	height: auto;
	max-width: 100%;
}

.download-appstore-badge {
	height: 60px;
}

.download-app-icon {
	height: 60px;
	width: 60px;
}

ul {
    margin-left: 0;
    padding-left: 20px;
}

ol {
    margin-left: 0;
    padding-left: 26px;
}

a { 
    color:{{ site.colors.link }};
    padding: 0;
	margin: 0;
	text-decoration: none; 
	-webkit-transition: background-color .4s linear, color .4s linear;
	-moz-transition: background-color .4s linear, color .4s linear;
	-o-transition: background-color .4s linear, color .4s linear;
	-ms-transition: background-color .4s linear, color .4s linear;
	transition: background-color .4s linear, color .4s linear;
}

a:hover,
a:focus {
	text-decoration: none;
	color:{{ site.colors.link_hover }};
}

::-moz-selection  {
	color: #fff;
	text-shadow:none;
	background:{{ site.colors.secondary }};
}
::selection {
	color: #fff;
	text-shadow:none;
	background:{{ site.colors.secondary }};
}

.centered {
	text-align: center
}

/* Bootstrap overrides */

.navbar {
	min-height: 70px;
	padding-top: 10px;
	margin-bottom: 0px;
}

.navbar-brand {
	font-family: 'Lato', sans-serif;
	font-weight: 900;
	padding-left: 10px;
}

.navbar-header .navbar-brand {
	color: white;
}

.navbar-default .navbar-nav > li > a {
	color: white;
	font-weight: 700;
	font-family: 'Lato', sans-serif;
	font-size: 12px;
}

.navbar-default .navbar-nav > li > a:hover {
	color: {{ site.colors.primary }};
}

.navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus {
	color: {{ site.colors.primary }};
	background-color: transparent;
}

.navbar-default {
	background-color: {{ site.colors.secondary }};
	border-color: transparent;
}

.dropdown-menu {
	background: {{ site.colors.secondary }};
}

.dropdown-menu > li > a {
	color: white;
	font-weight: 700;
	font-size: 12px;
}

.btn-theme {
	background-color: rgba(0, 0, 0, 0);
	color: {{ site.colors.secondary }};
	border-color: {{ site.colors.secondary }};
	margin: 6px;
	font-size: 16px;
}

.btn-theme:hover,
.btn-theme:focus,
.btn-theme:active,
.btn-theme.active,
.open .dropdown-toggle.btn-theme {
	color: #fff;
	background-color: {{ site.colors.primary }};
	border-color: {{ site.colors.primary }};
}

.dmbutton:hover,
.dmbutton:active,
.dmbutton:focus{
	color: #ffffff;
	background-color: #222222;
	border-color: #ffffff;
}

.dmbutton {
	background:rgba(0, 0, 0, 0);
	border: 1px solid #ffffff;
	color: #ffffff;
	-webkit-border-radius: 2px;
	border-radius: 2px;
	padding-top: 1.025rem;
	padding-right: 2.25rem;
	letter-spacing:0.85px;
	padding-bottom: 1.0875rem;
	padding-left: 2.25rem;
	font-size: 1.55rem;
	cursor: pointer;
	font-weight: normal;
	line-height: normal;
	margin: 0 0 1.25rem;
	text-decoration: none;
	text-align: center;
	display: inline-block;
	-webkit-transition: background-color 300ms ease-out;
	-moz-transition: background-color 300ms ease-out;
	transition: background-color 300ms ease-out;
	-webkit-appearance: none;
	font-weight: normal !important;
}

.mtb {
	margin-top: 80px;
	margin-bottom: 80px;
}

.mb {
	margin-bottom: 60px;
}

.mt {
	margin-top: 60px;
}

.hline {
	border-bottom: 2px solid {{ site.colors.secondary }};
}

.hline-w {
	border-bottom: 2px solid #ffffff;
	margin-bottom: 25px;
}

/* Site wraps */

#headerwrap {
	background: {{ site.colors.primary }};
	background: url(../img/bg.svg) center no-repeat;
	background-size: cover;
	min-height: 0px;
	padding-top: 100px;
	text-align: center;
}

#headerwrap h3, h5 {
	color: white;
	font-weight: 400;
}

#headerwrap h1 {
	color: white;
	margin-bottom: 25px;
}

#headerwrap .img-responsive {
	margin: 0 auto;
}

/* Services Wrap */
#service {
	margin-top: 0px;
	margin-bottom: 0px;
	padding-bottom: 70px;
}

#service i {
	color: {{ site.colors.secondary }};
	font-size: 60px;
	padding: 15px;
}

/* Portfolio Wrap */

#portfoliowrap {
	padding-top: 60px;
	margin-bottom: 60px;
	display: block;
	text-align: center
}

#portfoliowrap h3 {
	margin-bottom: 25px;
}

.portfolio {
	padding:0 !important;
	margin:0 !important;
	display:block;
}

.portfolio-item .title:before {border-radius:0; display:none}
.portfolio-item p {margin:0px 0 30px;}
.portfolio-item h3 {margin:-10px 0 10px; font-size:16px; text-transform:uppercase;}


.tpl6 h3
{
	color:#fff;
	margin:0;
	padding:40px 5px 0;
	font-size:16px;
	text-transform:uppercase;
}

.tpl6 .dmbutton
{
	display:inline-block;
	margin:30px 5px 20px 5px;
	font-size:13px;
}

.tpl6 .bg
{
	height:100%;
	width:100%;
	background-color:{{ site.colors.primary }};
	background-color:rgba({{ site.colors.primary_rgb }},.9);
	text-align:center;
}

/* Testimonials Wrap */

#twrapback {
    background-color: {{ site.colors.primary }};
    background-color:rgba({{ site.colors.primary_rgb }},.8);
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
}
/* ... */

